[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch.radon"
version = "0.1"
authors = [
  { name="Minh Nhat Trinh", email="minhnhattrinh312@gmail.com" },
]
description = "Radon Transformation for Pytorch 2.0 package"
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
    ]

[project.urls]
Homepage = "https://github.com/minhnhattrinh312/torch_radon24.git"
Issues = "https://github.com/minhnhattrinh312/torch_radon24/issues"